A fix: bug#6931: Date Type column problem when using UNION-Table        bug#7833:  Wrong datatype of aggregate column is returned